@@ -1,18 +1,16 @@
 package ca.weblite.objc;
 
-import org.junit.After;
-import org.junit.AfterClass;
-import org.junit.Before;
-import org.junit.BeforeClass;
-import org.junit.Test;
-import static org.junit.Assert.*;
 import static ca.weblite.objc.RuntimeUtils.*;
-import ca.weblite.objc.annotations.Msg;
+import static org.junit.Assert.*;
+
+import java.util.List;
+
+import org.junit.Test;
+
 import com.sun.jna.Pointer;
 import com.sun.jna.Structure;
-import com.sun.jna.ptr.PointerByReference;
-import java.util.Arrays;
-import java.util.List;
+
+import ca.weblite.objc.annotations.Msg;
 
 /**
  *
@@ -29,30 +27,9 @@ public class NSObjectTest {
        
 
         @Override
-        protected List getFieldOrder() {
-            return Arrays.asList(new String[]{"location","length"});
+        protected List<String> getFieldOrder() {
+            return List.of("location","length");
         }
-    }
-    
-    
-    public NSObjectTest() {
-    }
-    
-    @BeforeClass
-    public static void setUpClass() {
-    }
-    
-    @AfterClass
-    public static void tearDownClass() {
-    }
-    
-    @Before
-    public void setUp() {
-       
-    }
-    
-    @After
-    public void tearDown() {
     }
 
     /**
